chore prepare build gradle script for java preview feature